짜잘한 수정

--- a/www/eyemenu03/page02.html
+++ b/www/eyemenu03/page02.html
@@ -13,7 +13,7 @@
                     <i></i>
                 </h3>
             </div>
-            <div class="contents bg-gray">
+            <div class="contents bg-gray-gradation2">
                 <div class="sub-inner">
                     <h4 class="simbol-tit">
                         녹내장 검사
@@ -34,11 +34,7 @@
                             정확한 진단과 치료를 이끌어냅니다.
                         </p>
                     </div>
-                </div>
-            </div>
-            <div class="contents">
-                <div class="sub-inner">
-                    <div class="flex-list-02 n4">
+                    <div class="flex-list-02 n4 margin-t">
                         <div>
                             <img src="/resource/images/eye03-02-03.png" alt="">
                             <p>무산동 광각안저촬영</p>
